...
    <!-- AuthenticatingScreen -->
    <!-- AuthenticatingScreen -> error screen -->
    <string name="authenticating_screen_error_screen_error_message">Something went wrong…\nYou need to log in again.</string>
    <string name="authenticating_screen_error_screen_login_button">Take me to login</string>

    <!-- LoginScreen -->
    <string name="login_screen_login_button">Log in</string>
    <string name="login_screen_github_icon_content_description">Github icon</string>
    <string name="login_screen_loudius_logo_content_description">Loudius logo</string>

    <!-- LoginScreen -> XiaomiPermissionDialog -->
    <string name="login_screen_xiaomi_dialog_grant_permission">Grant permission</string>
    <string name="login_screen_xiaomi_dialog_text">You\'re using a Xiaomi device and you have Github App installed, please note that there\'s a known bug that requires you to grant the \"Display pup-up windows while running in the background\" permission. This will allow you to continue using the app without any interruptions.</string>
...
    <string name="pull_requests_screen_pull_request_content_description">Pull request</string>

    <!-- ReviewersScreen -->
    <string name="reviewers_screen_snackbar_success_message">Awesome! Your collaborator have been pinged for some serious code review action! 🎉</string>
    <string name="reviewers_screen_snackbar_failure_message">Uh-oh, it seems that Loudius has taken a vacation. Don\'t worry, we\'re sending a postcard to bring it back ASAP!</string>
    <string name="reviewers_screen_user_image_content_description">User image</string>
    <string name="reviewers_screen_notify_button">Notify</string>
    <string name="reviewers_screen_reviewed_message">Reviewed %d h ago.</string>
    <string name="reviewers_screen_not_reviewed_message">Not reviewed for %d h.</string>
    <string name="reviewers_screen_title">Pull request # %s</string>
    <string name="reviewers_screen_you_dont_have_any_reviewers_message">Sorry! Your list of reviewers is empty.\n Go to pull request and mark your colleagues as the reviewers! 🤞</string>

</resources>
...
