...
                                    "comments_url":"https://api.github.com/repos/exampleOwner/exampleRepo/issues/1/comments",
                                    "events_url":"https://api.github.com/repos/exampleOwner/exampleRepo/issues/1/events",
                                    "html_url":"https://github.com/exampleOwner/exampleRepo/pull/1",
                                    "id":1,
                                    "node_id":"example_node_id",
                                    "number":1,
                                    "title":"First Pull-Request title",
                                    "user":{
                                        "login":"exampleUser",
                                        "id":1,
                                        "node_id":"example_user_node_id",
                                        "avatar_url":"https://avatars.githubusercontent.com/u/1",
                                        "gravatar_id":"",
...
